@@ -538,6 +538,7 @@
     "*://*.rollingstone.com/*",
     "*://*.rugbypass.com/*",
     "*://*.rugbyrama.fr/*",
+    "*://*.ruhrnachrichten.de/*",
     "*://*.rundschau-online.de/*",
     "*://*.runnersworld.com/*",
     "*://*.sabado.pt/*",
@@ -754,5 +755,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.6.0"
+  "version": "3.2.6.1"
 }
