@@ -2,6 +2,7 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Add Ruhr Nachrichten (+ Media Group Westfalen; opt-in to custom sites)
 
 * v3.2.6.0 (2023-07-23)
 Add Auto-motor-und-sport.de
